--- a/bitcoin_node/bitcoin.conf
+++ b/bitcoin_node/bitcoin.conf
@@ -8,7 +8,7 @@ blocksonly=1
 maxconnections=40
 maxuploadtarget=5000
 #adjust for testnet
-#testnet=1
+testnet=1
 nodebuglogfile=1
 debug=mempool
 debug=rpc
