--- a/bitcoin_node/template.yaml
+++ b/bitcoin_node/template.yaml
@@ -7,7 +7,7 @@ Parameters:
   EnvironmentName:
     Description: An environment name that will be prefixed to resource names
     Type: String
-    Default: bitcoin-testnet
+    Default: bitcoin
 
   VpcCIDR:
     Description: Please enter the IP range (CIDR notation) for this VPC
